# project-euler-rust

./: .gitignore  README.md  build  clean  new
runner/: Cargo.toml
runner/src/: lib.rs  main.rs
runner/src/lib/: mod.rs  solver_result.rs  time_formatter.rs
solvers/001/src/: main.rs
solvers/002/src/: main.rs
solvers/003/src/: main.rs
solvers/004/src/: main.rs
solvers/005/src/: main.rs
solvers/006/src/: main.rs
solvers/007/src/: main.rs
solvers/008/src/: main.rs
solvers/009/src/: main.rs
solvers/010/src/: main.rs
solvers/011/src/: main.rs
solvers/012/src/: main.rs
solvers/013/: Cargo.toml
solvers/013/src/: main.rs
solvers/014/src/: main.rs
solvers/015/: Cargo.toml
solvers/015/src/: main.rs
solvers/016/src/: main.rs
solvers/017/src/: main.rs
solvers/018/src/: main.rs
solvers/019/src/: main.rs
solvers/020/: Cargo.toml
solvers/020/src/: main.rs
solvers/021/: Cargo.toml
solvers/021/src/: main.rs
solvers/022/src/: main.rs
solvers/023/src/: main.rs
solvers/024/: Cargo.toml
solvers/024/src/: main.rs
solvers/025/src/: main.rs
solvers/026/src/: main.rs
solvers/027/src/: main.rs
solvers/028/src/: main.rs
solvers/029/: Cargo.toml
solvers/029/src/: main.rs
solvers/030/src/: main.rs
solvers/031/src/: main.rs
solvers/032/src/: main.rs
solvers/033/src/: main.rs
solvers/034/src/: main.rs
solvers/035/src/: main.rs  utils.rs
solvers/036/src/: main.rs
solvers/template/src/: main.rs
