[package]
name = "template"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factorial = {git = "https://github.com/kconte/rust-factorial", features = ["num-bigint"]}
num-bigint = "0.4.0"
num-traits = "0.2.14"
